--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "form-data": "^4.0.4",
     "json-mapper-json": "^1.3.3",
     "merge-deep": "^3.0.3",
-    "moment": "^2.30.1",
+  "date-fns": "^3.6.0",
     "multer": "^1.4.5-lts.2",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
